@@ -1,9 +1,12 @@
 # ChangeLog for Gentoo Linux Installer
 # Copyright 2004 Gentoo Technologies, Inc.
-# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.123 2005/03/30 22:11:27 agaffney Exp $
+# $Header: /var/cvsroot/gentoo/src/installer/ChangeLog,v 1.124 2005/03/31 18:12:15 codeman Exp $
 
 *GLI-0.01 (9 Feb 2004)
 
+  31 Mar 2005; Preston Cody <codeman@gentoo.org>
+  Fixed indent problem in GLICController
+  
   30 Mar 2005; Andrew Gaffney <agaffney@gentoo.org>
   Check for disklabel type "loop" and use the device name without a minor.
 
